--- a/src/style.scss
+++ b/src/style.scss
@@ -33,6 +33,10 @@ $background: $background-color;
       }
 }
 
+.hidden {
+    display: none !important;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -47,7 +51,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: $background;
-    height: 200vh;
+    height: 120vh;
 }
 
 #header {
@@ -57,6 +61,7 @@ body {
     border-radius: 10px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
     h1 {
+        color: #EDDEA4;
         font-size: 4rem;
         text-align: center;
         padding: 1rem;
@@ -68,7 +73,7 @@ body {
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-areas:
-    "content buttons";
+    "content controls";
     #footer {
         z-index: 100;
         height: 30vh;
@@ -90,6 +95,7 @@ body {
 }
 
 #modal-popup-button {
+    color: #EDDEA4;
     z-index: 1000;
     background-color: $primary;
     border: none;
@@ -98,7 +104,7 @@ body {
     position: fixed;
     bottom: 5%;
     transform: translateX(-50%);
-    left: 50%;
+    left: 75%;
 
     width: 30vw;
     height: 30vw;
@@ -108,38 +114,59 @@ body {
     justify-content: center;
 }
 
+#list-controls {
+    grid-area: controls;
+}
+
 #delete-buttons {
-    grid-area: buttons;
+    z-index: 9000;
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    button {
-        text-align: center;
-        background-color: $tertiary-color;
+    #delete-options-button {
         border: none;
+        background-color: $tertiary-color;
         border-radius: 100px;
-        font-size: 0.9rem;
+        padding: 1.6rem;
         position: fixed;
-        white-space: pre-wrap;
-        height: fit-content;
-        padding: 0.8rem;
-        width: 20vw;
-        height: 10vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        opacity: 80%;
-        &:active {
-            opacity: none;
+        width: fit-content;
+        bottom: 5%;
+        transform: translateX(-50%);
+        left: 25%;
+        #delete-options-icon {
+            height: 18vw;
         }
     }
-    button:first-child {
+    #delete-options-container {
         position: fixed;
-        top: 30%;
+        width: fit-content;
+        bottom: 5%;
+        transform: translateX(-50%);
+        left: 25%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        button {
+            text-align: center;
+            background-color: $tertiary-color;
+            border: none;
+            border-radius: 10px;
+            font-size: 1rem;
+            height: fit-content;
+            padding: 1rem;
+            width: 40vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            ::after {
+                content: url('trash.svg')
+            }
+        }
 
     }
 }
+
 
 #item-list {
     z-index: 0;
