--- a/src/style.scss
+++ b/src/style.scss
@@ -55,25 +55,63 @@ body {
 }
 
 #header {
-    height: 15vh;
-    position: sticky;
+    display: flex;
+    top: 0px;
+    border: none;
+    width: 100vw;
+    z-index: 9000;
+    grid-area: header;
+    height: 20vh;
+    position: fixed;
     background-color: $primary;
-    border-radius: 10px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
     h1 {
         color: #EDDEA4;
         font-size: 4rem;
         text-align: center;
-        padding: 1rem;
+        padding: 1rem; 
     }
-}
+};
 
 #content-area {
+    //overflow-y: scroll;
     margin: 0.5rem;
     display: grid;
+    grid-template-rows: 1fr 5fr;
     grid-template-columns: 4fr 1fr;
     grid-template-areas:
+    "header header"
     "content controls";
+    #list-controls {
+        grid-area: controls;
+        display: flex;
+        #sort-button {
+            align-self: flex-start;
+            text-align: center;
+            background-color: $secondary;
+            color: $text;
+            border: none;
+            border-radius: 10px;
+            font-size: 1rem;
+            height: fit-content;
+            padding: 0.8rem;
+            width: 23vw;
+        }
+        #sort-button::after {
+            content: 'Date Ascending\a↑';
+            display: block;
+            color: gray;
+            font-size: 0.8rem;
+            padding-top: 0.5rem;
+        }
+        #sort-button.descending::after {
+            content: 'Date Descending\a↓';
+            display: block;
+            color: gray;
+            font-size: 0.8rem;
+            padding-top: 0.5rem;
+        }
+    }
     #footer {
         z-index: 100;
         height: 30vh;
@@ -115,7 +153,6 @@ body {
 }
 
 #list-controls {
-    grid-area: controls;
 }
 
 #delete-buttons {
