--- a/src/style.scss
+++ b/src/style.scss
@@ -66,6 +66,7 @@ body {
     background-color: $primary;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
     h1 {
+        font-family: 'Calligraffitti', cursive;
         color: #EDDEA4;
         font-size: 4rem;
         text-align: center;
@@ -221,6 +222,7 @@ body {
          "main buttons"
          ". date";
         p:first-child {
+            font-family: 'Calligraffitti', cursive;
             padding-left: 0.5rem;
             font-size: larger;
             font-weight: bold;
