--- a/src/style.scss
+++ b/src/style.scss
@@ -62,6 +62,7 @@ button {
 
 :root {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -79,29 +80,120 @@ body {
   width: 100vw;
   z-index: 9000;
   grid-area: header;
-  height: 20vh;
+  height: calc(15vh + 1vw);
   position: fixed;
   background-color: $primary;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  justify-content: center;
   h1 {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
     font-family: "Calligraffitti", cursive;
     color: #f9f7f3;
-    font-size: calc(1.6rem + 2vw);
+    font-size: calc(1.6rem + 3vw);
     text-align: center;
     padding: 1rem 0rem 1rem 1.5rem;
   }
   img {
-    transform: scale(0.9);
+    transform: scale(0.8);
     filter: invert(0.93);
   }
 }
 
+#add-item-form, #edit-item-form {
+    border: solid $primary 3px;
+    position: fixed;
+    top: 20%;
+    right: 5%;
+    z-index: 99999;
+    background-color: $secondary;
+    width: 90vw;
+    height: fit-content;
+    #close-form {
+        position: absolute;
+        right: 0px;
+        align-self: flex-end;
+        text-align: center;
+        background-color: transparent;
+        color: $background-color;
+        border: none;
+        height: fit-content;
+        font-size: 3rem;
+        width: 20vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    ul {
+        padding: 1rem;
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    .form-row:first-child {
+        background-color: $secondary;
+        border-bottom: $primary solid 2px;
+        justify-self: stretch;
+        align-self: stretch;
+        p {
+          text-align: center;
+          font-weight: bold;
+          font-size: calc(20px + 1vw);
+          margin: 1rem 0rem 1rem 0rem;
+        }
+    }
+    .form-row:last-child {
+        align-self: center;
+        width: fit-content;
+        margin: 1rem;
+    }
+    .form-row {
+        width: 100%;
+        height: 25%;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: flex-start;
+        margin-bottom: 1rem;
+        label {
+            margin-bottom: 5px;
+            display: block;
+            font-size: 1rem;
+            padding: 0 20px 0 10px;
+        }
+        input {
+            background-color: #FFFFFF;
+            border: 1px solid #D6D9DC;
+            border-radius: 3px;
+            width: 100%;
+            padding: 7px;
+            font-size: 1rem;
+        }
+        button {
+            display: flex;
+            font-size: 1.1rem;
+            font-weight: bold;
+            
+            color: #FFFFFF;
+            background-color: $primary;
+            
+            border: none;
+            border-radius: 3px;
+            
+            padding: 1rem;
+            margin-top: 2rem 0rem 2rem 0rem;
+            cursor: pointer;
+        }
+    }
+    }
+}
+
+
+
 #content-area {
   position: absolute;
-  top: 20vh;
+  top: calc(18vh + 1vw);
   height: fit-content;
   margin: 0.5rem;
   display: grid;
@@ -119,23 +211,27 @@ body {
       color: $text;
       border: none;
       border-radius: 10px;
-      font-size: 1rem;
+      font-size: calc(0.6rem + 1vw);
       height: fit-content;
       padding: 0.8rem;
-      width: 23vw;
+      width: 20vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     #sort-button::after {
       content: "Date Ascending\a↑";
       display: block;
       color: gray;
-      font-size: 0.8rem;
+      font-size: calc(0.4rem + 1vw);
       padding-top: 0.5rem;
     }
     #sort-button.descending::after {
       content: "Date Descending\a↓";
+      text-align: center;
       display: block;
       color: gray;
-      font-size: 0.8rem;
+      font-size: calc(0.4rem + 1vw);
       padding-top: 0.5rem;
     }
   }
@@ -169,14 +265,14 @@ body {
   background-color: $primary;
   border: none;
   border-radius: 100px;
-  font-size: 5em;
+  font-size: calc(10vh + 20px);
   position: fixed;
   bottom: 5%;
   transform: translateX(-50%);
   left: 75%;
 
-  width: 30vw;
-  height: 30vw;
+  width: calc(30vw - 40px);
+  height: calc(30vw - 40px);
 
   display: flex;
   align-items: center;
@@ -193,14 +289,18 @@ body {
     border: none;
     background-color: $tertiary-color;
     border-radius: 100px;
-    padding: 1.6rem;
+    //padding: 1.6rem;
     position: fixed;
-    width: fit-content;
+    width: calc(30vw - 40px);
+    height: calc(30vw - 40px);
     bottom: 5%;
     transform: translateX(-50%);
     left: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     #delete-options-icon {
-      height: 18vw;
+      height: calc(18vw - 20px);
     }
   }
   #delete-options-container {
@@ -254,7 +354,7 @@ body {
       display: flex;
       font-family: "Calligraffitti", cursive;
       padding-left: 0.5rem;
-      font-size: larger;
+      font-size: calc(1vw + 10px);
       font-weight: bold;
       display: flex;
       justify-content: center;
@@ -306,6 +406,8 @@ body {
       left: 90%;
       height: fit-content;
       padding: 1rem;
+      height: 13.8vh;
+      width: 13.8vh;
       #delete-options-icon {
         height: 8vh;
       }
@@ -323,6 +425,7 @@ body {
     transform: translateX(-50%);
     left: 90%;
     display: flex;
+    font-size: 15vh;
 
     height: 13.8vh;
     width: 13.8vh;
@@ -335,6 +438,17 @@ body {
 
   #footer {
     display: none;
+  }
+  
+  #button-box button {
+    opacity: 50%;
+  }
+
+  #item-list div:hover #button-box button {
+    opacity: 70%;
+    &:hover {
+        opacity: 100%;
+    }
   }
 }
 
