--- a/src/style.scss
+++ b/src/style.scss
@@ -103,6 +103,7 @@ body {
 }
 
 #add-item-form, #edit-item-form {
+    border-radius: 10px;
     border: solid $primary 3px;
     position: fixed;
     top: 20%;
@@ -113,7 +114,7 @@ body {
     height: fit-content;
     #close-form {
         position: absolute;
-        right: 0px;
+        right: 1rem;
         align-self: flex-end;
         text-align: center;
         background-color: transparent;
@@ -121,7 +122,7 @@ body {
         border: none;
         height: fit-content;
         font-size: 3rem;
-        width: 20vw;
+        width: fit-content;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -413,10 +414,31 @@ body {
       }
     }
     #delete-options-container {
+        position: fixed;
+        left: 90%;
+        bottom: 0%;
+        align-items: center;
       button {
+        width: fit-content;
         ::after {
         }
       }
+    }
+  }
+  #add-item-form, #edit-item-form {
+    height: fit-content;
+    border-radius: 10px;
+    border: solid $primary 3px;
+    position: fixed;
+    top: 18%;
+    right: 5%;
+    z-index: 99999;
+    background-color: $secondary;
+    width: fit-content;
+    height: fit-content;
+    ul {
+        height: 60vh;
+
     }
   }
   #modal-popup-button {
