--- a/src/style.scss
+++ b/src/style.scss
@@ -69,6 +69,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: $background;
+  background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png");
   height: auto;
 }
 
@@ -83,6 +84,7 @@ body {
   height: calc(15vh + 1vw);
   position: fixed;
   background-color: $primary;
+  background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png");
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
   align-items: center;
   justify-content: center;
@@ -431,7 +433,7 @@ body {
     border: solid $primary 3px;
     position: fixed;
     top: 18%;
-    right: 5%;
+    right: 3%;
     z-index: 99999;
     background-color: $secondary;
     width: fit-content;
