add 'clear completed items' functionality

--- a/src/style.scss
+++ b/src/style.scss
@@ -328,7 +328,7 @@ body {
       justify-content: center;
       align-items: center;
       ::after {
-        content: url("trash.svg");
+        content: url("./assets/trash.svg");
       }
     }
   }
