--- a/src/style.scss
+++ b/src/style.scss
@@ -33,7 +33,7 @@ $background: $background-color;
   }
 }
 
-button {
+button:not(.submit-form-button) {
   &:hover {
     cursor: pointer;
     width: 1.1rem;
@@ -71,6 +71,10 @@ body {
   background-color: $background;
   background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png");
   height: auto;
+}
+
+.main-button:hover {
+    scale: 1.05;
 }
 
 #header {
@@ -319,7 +323,7 @@ body {
     left: 25%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
     button {
       text-align: center;
       background-color: $tertiary-color;
@@ -423,7 +427,7 @@ body {
     #delete-options-container {
         position: fixed;
         left: 90%;
-        bottom: 0%;
+        bottom: 2%;
         align-items: center;
       button {
         width: fit-content;
@@ -436,8 +440,8 @@ body {
     border-radius: 10px;
     border: solid $primary 3px;
     position: fixed;
-    top: 18%;
-    right: 3%;
+    top: 12%;
+    right: 1%;
     z-index: 99999;
     background-color: $secondary;
     width: fit-content;
@@ -446,10 +450,18 @@ body {
         height: 60vh;
 
     }
+    .submit-form-button {
+        &:hover {
+            filter: brightness(1.05);
+        }
+        &:active {
+            scale: 1.05;
+        }
+    }
   }
   #modal-popup-button {
     position: fixed;
-    bottom: 22%;
+    bottom: 28%;
     transform: translateX(-50%);
     left: 90%;
     display: flex;
