--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,17 @@ $secondary: $secondary-color;
 $text: $text-color;
 $background: $background-color;
 
+@keyframes slidein {
+    from {
+    //   padding-right: -100%;
+      width: 300%;
+    }
+    to {
+    //   padding-right: 0%;
+      width: 100%;
+    }
+  }
+
 @keyframes fadeOut {
   from {
     opacity: 1;
@@ -78,6 +89,7 @@ body {
 }
 
 #header {
+  animation: slidein 0.5s;
   display: flex;
   flex-wrap: nowrap;
   top: 0px;
@@ -109,6 +121,7 @@ body {
 }
 
 #add-item-form, #edit-item-form {
+    animation: fadeIn 0.2s;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
@@ -207,7 +220,7 @@ body {
   position: absolute;
   top: calc(18vh + 1vw);
   height: fit-content;
-  margin: 0.5rem;
+  margin: 0.5rem 1.5rem 0.5rem 0.5rem;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 4fr 1fr;
@@ -343,6 +356,7 @@ body {
   }
 }
 
+
 #item-list {
   height: fit-content;
   z-index: 0;
@@ -350,10 +364,12 @@ body {
   grid-area: content;
   display: flex;
   flex-flow: column nowrap;
-  div {
+  #item-box {
+    padding: 1rem;
     border-radius: 20px;
     background-color: $secondary;
     margin: 1rem;
+    gap: 0.5rem;
     display: grid;
     grid-template: 2fr 1fr / 1fr 1fr;
     grid-template-areas:
@@ -448,6 +464,7 @@ body {
     height: fit-content;
     ul {
         height: 60vh;
+        width: 30vw;
 
     }
     .submit-form-button {
@@ -496,3 +513,41 @@ body {
 @media screen and (min-width: 1024px) {
   /* Your CSS rules here */
 }
+
+
+
+// styling pertaining to list UI effects:
+
+
+// #item-box-outer{
+//     text-align: center;
+//     list-style: none !important;
+//     font-size: 3.5rem;
+//     width: 300px;
+//     height: 0;
+//     position: relative;
+//     cursor: pointer;
+// }
+
+// #item-box-outer.show:not(:first-child){
+//     margin-top: 10px !important;
+// }
+
+// #item-box-outer #item-box {
+//     padding: 2rem 0;
+//     width: 100%;
+//     background-color: lightgray;
+//     position: absolute;
+//     opacity: 0;
+//     top: 0;
+//     left: 0;
+//     transform: translateY(-300px);
+//     transition: all 0.6s ease-out;
+// }
+
+// #item-box-outer #item-box.show{
+//     opacity: 1 !important;
+//     transform: translateY(0) !important;
+// }
+
+
