--- a/src/style.scss
+++ b/src/style.scss
@@ -181,6 +181,10 @@ body {
         flex-flow: column wrap;
         justify-content: flex-start;
         margin-bottom: 1rem;
+        .input-error-message {
+            color: red;
+            text-align: center;
+        }
         label {
             margin-bottom: 5px;
             display: block;
